# devops-backend-structure

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/database/: mod.rs  mongodb.rs
src/middlewares/: auth.rs  auth_middleware.rs  context.rs  logging_middleware.rs  mod.rs
src/models/: item.rs  mod.rs  post.rs  tag.rs  user.rs
src/repositories/: item_repository.rs  mod.rs  post_repository.rs  tag_repository.rs  user_repository.rs
src/routes/: auth_route.rs  file_route.rs  item_route.rs  item_routes.rs  mod.rs  post_route.rs  tag_route.rs  user_route.rs  user_routes.rs
src/services/: auth_service.rs  item_service.rs  mod.rs  post_service.rs  tag_service.rs  user_service.rs
src/utils/: helps.rs  jwt.rs  mod.rs  session.rs
test/: upload.html
